--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,10 @@ a {
   font-style: italic; 
   font-weight: normal; 
 }
+
+
+h2 {
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 0;
+}
