--- a/src/pages/Settings/Settings.module.css
+++ b/src/pages/Settings/Settings.module.css
@@ -1,1 +1,13 @@
+.penIcon {
+    display: inline-block;
+    width: 15px;
+    margin-left: 5px;
+}
 
+.contacts {
+    padding-left: 10px;
+}
+
+.editTitle {
+    cursor: pointer;
+}
